--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,9 @@
   },
   "homepage": "https://github.com/lauribusa/angunode#readme",
   "dependencies": {
-    "angular": "^1.6.9"
+    "angular": "^1.6.9",
+    "es6-promisify": "^6.0.0",
+    "hapi": "^17.2.0",
+    "mongoose": "^5.0.4"
   }
 }
