--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,9 @@
   "dependencies": {
     "es6-promisify": "^6.0.0",
     "hapi": "^17.2.0",
-    "mongoose": "^5.0.4"
+    "mongoose": "^5.0.4",
+    "glue": "^5.0.0",
+    "hapi-moongoose-models-plugin": "^0.0.3",
+    "hapi-routes-plugin": "^0.0.2"
   }
 }
