--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "angular-node-ex01",
   "version": "0.0.1",
   "description": "Node JS + angular",
-  "main": "start.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
