--- a/server/package.json
+++ b/server/package.json
@@ -1,30 +1,14 @@
 {
-  "name": "angular-node-ex01",
-  "version": "0.0.1",
-  "description": "Node JS + angular",
-  "main": "server.js",
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "bootstrap.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/lauribusa/angunode.git"
-  },
-  "keywords": [
-    "node",
-    "angular",
-    "hacking"
-  ],
-  "author": "Lightbolt",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/lauribusa/angunode/issues"
-  },
-  "homepage": "https://github.com/lauribusa/angunode#readme",
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "es6-promisify": "^6.0.0",
-    "hapi": "^17.2.0",
-    "mongoose": "^5.0.4",
     "glue": "^5.0.0",
     "hapi-moongoose-models-plugin": "^0.0.3",
     "hapi-routes-plugin": "^0.0.2"
